# Secure-Messaging-Protocol

./: .gitignore  Enforcement_rules.md  README.md  implementation_plan.md
api-spec/: 01_rest_api.md  04_registry_api.md
api_spec/: 02_auth_flow.md
client_architecture/: 02_state_management.md
core/: 01_Problem_Statement.md  02_Threat_Model.md  03_Design_Principles.md  04_Identity_Model.md  05_Trust_Model.md  07_Cryptographic_Core.md
data_paths/: 03_Session_Model.md  05_Attachments.md  06_Multi_Device.md
docs/client_architecture/: 01_client_overview.md
docs/core/: 02_Threat_Model.md  06_Encryption_Model.md
docs/data_paths/: 01_Message_Flow.md
docs/operational_infrastructure/: 02_Storage_Model.md
docs/reference_implementation/: 01_project_structure.md
docs/tui/: 01_overview.md  02_screens_and_flows.md  03_state_integration.md
operational_infrastructure/: 03_Identity_Registry.md  04_Trust_Engine.md  06_Metadata_Protection.md  07_Governance.md
reference_implementation/: 01_project_structure.md  02_crypto_module.md  03_session_manager.md  05_storage_service.md
smp/: Cargo.toml
smp/configs/: client.yaml  registry.yaml  relay.yaml
smp/crates/crypto/: Cargo.toml
smp/crates/crypto/src/: aead.rs  error.rs  hash.rs  hkdf.rs  keys.rs  lib.rs  signing.rs
smp/crates/identity/: Cargo.toml
smp/crates/identity/src/: error.rs  hash.rs  lib.rs  object.rs  username.rs
smp/crates/message/: Cargo.toml
smp/crates/message/src/: lib.rs
smp/crates/registry_client/: Cargo.toml
smp/crates/registry_client/src/: lib.rs
smp/crates/relay_client/: Cargo.toml
smp/crates/relay_client/src/: lib.rs
smp/crates/session/: Cargo.toml
smp/crates/session/src/: lib.rs
smp/crates/storage/: Cargo.toml
smp/crates/storage/src/: lib.rs
smp/crates/trust/: Cargo.toml
smp/crates/trust/src/: lib.rs
smp/docs/api_spec/: 03_relay_api.md
smp/docs/client_architecture/: 03_security_model.md  04_message_handling.md
smp/docs/data_paths/: 02_Handshake_Protocol.md  04_Message_Format.md
smp/docs/operational_infrastructure/: 01_Relay_Architecture.md  05_Spam_Resistance.md
smp/docs/reference_implementation/: 04_relay_service.md
smp/docs/tui/: 04_implementation.md
