[package]
name = "smp-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cryptographic primitives for the Secure Messaging Protocol"

[dependencies]
x25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
sha2 = { workspace = true }
hkdf = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true, features = ["derive"] }
serde = { workspace = true }

[dev-dependencies]
